<?xml version="1.0" encoding="utf-8"?>

<!-- This XML layout defines a screen for adding a product, featuring an app bar with a custom toolbar,
     input fields for product name and price, and buttons for canceling and saving. -->

<!-- Root layout container -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <!-- App bar with custom toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Widget.MaterialComponents.ActionBar.Primary">

        <!-- Toolbar for the app bar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <!-- Close button -->
            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@color/colorPrimary"
                android:src="@drawable/baseline_cancel_24"
                android:importantForAccessibility="no" />

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/onSurface"
                android:fontFamily="@font/sailec_bold_italic"
                android:text="@string/addProduct"
                android:textSize="@dimen/_10sdp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Input fields and buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Product Name Input -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:hint="@string/textInputNameProduct"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productNameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/name_product_24dp"
                android:fontFamily="@font/poppinsmedium" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Price Input -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/textInputPrice"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/price_24dp"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <!-- Cancel Button -->
            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/sailec_black_italic"
                android:text="@string/cancel"
                android:textColor="@color/onSurface"
                android:textSize="@dimen/_10sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <!-- Save Button -->
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/sailec_black_italic"
                android:text="@string/Save"
                android:textColor="@color/onSurface"
                android:textSize="@dimen/_10sdp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

