<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!-- App bar with custom toolbar -->
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.MaterialComponents.ActionBar.Primary">

            <!-- Toolbar for the app bar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary">

                <!-- Close button -->
                <ImageButton
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/baseline_cancel_24"
                    android:importantForAccessibility="no" />

                <!-- Title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/onSurface"
                    android:fontFamily="@font/sailec_bold_italic"
                    android:text="dialogOrder"
                    android:textSize="@dimen/_10sdp" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/onSurface"
            android:fontFamily="@font/sailec_bold_italic"
            android:text="@string/productName"
            android:textSize="@dimen/_6sdp" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:hint="@string/textInputNameProduct"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productNameEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/name_product_24dp"
                android:fontFamily="@font/poppinsmedium" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/onSurface"
            android:fontFamily="@font/sailec_bold_italic"
            android:text="@string/price"
            android:textSize="@dimen/_5sdp" />
        <!-- Price Input -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/textInputPrice"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/price_24dp"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/onSurface"
            android:fontFamily="@font/sailec_bold_italic"
            android:text="@string/quantity"
            android:textSize="@dimen/_5sdp" />
        <!-- Price Input -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/textInputPrice"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/price_24dp"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/onSurface"
            android:fontFamily="@font/sailec_bold_italic"
            android:text="@string/tax"
            android:textSize="@dimen/_5sdp" />
        <!-- Price Input -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/textInputPrice"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taxEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/price_24dp"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/onSurface"
            android:fontFamily="@font/sailec_bold_italic"
            android:text="@string/discount"
            android:textSize="@dimen/_5sdp" />
        <!-- Price Input -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/discount"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/discountEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/price_24dp"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/onSurface"
            android:fontFamily="@font/sailec_bold_italic"
            android:text="@string/subTotal"
            android:textSize="@dimen/_5sdp" />
        <!-- Price Input -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/subTotal"
            tools:ignore="HardcodedText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subTotalEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/price_24dp"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="@color/onSurface"
            android:fontFamily="@font/sailec_bold_italic"
            android:text="Total"
            android:textSize="@dimen/_5sdp" />
        <!-- Price Input -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="Total"
            tools:ignore="HardcodedText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:drawableEnd="@drawable/price_24dp"
                android:fontFamily="@font/poppinsmedium"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Save Button -->
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/sailec_black_italic"
            android:text="@string/Save"
            android:textColor="@color/onSurface"
            android:textSize="@dimen/_10sdp"
            style="?android:attr/buttonBarButtonStyle" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>